tests/fixtures/invalid/none_in_int.py
# Cannot use 'in' with None and Int
x: bool = None in 1
